--- a/index.html
+++ b/index.html
@@ -63,7 +63,13 @@
 <body>
 
   <h1>🎂 Happy Birthday! 🎉</h1>
+  <h1>Jayapreethi J</h1>
   <p>Wishing you a day filled with love, laughter, and happiness. May your year ahead be as amazing as you are!</p>
+  <p>🎈 Wishing you a magical day full of joy!<br>
+    🎁 May your dreams take flight today and always!<br>
+    🎂 Here's to you and your happiness!<br>
+    🌟 Shine bright, birthday star!<br>
+    🍰 Cake, candles & all the love in the world!</p>
 
   <div class="music-control">
     <button onclick="playMusic()">▶️ Play Music</button>
