--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   <!-- Background Music -->
   <audio id="birthdayMusic" loop>
-    <source src="https://www.bensound.com/bensound-music/bensound-happyrock.mp3" type="audio/mpeg">
+    <source src="birthday.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 
